--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,css,scss,json,md}": [
+      "eslint --fix",
       "prettier --write",
       "git add"
     ]
