--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "nodemon",
     "start:client": "webpack serve --mode development --compress --open",
     "dev": "webpack --watch --mode development --progress",
-    "build": "webpack --mode production --progress"
+    "build": "webpack --mode production --progress",
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "@babel/preset-react": "^7.12.13",
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1"
@@ -29,6 +31,9 @@
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
     "babel-loader": "^8.2.2",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
