--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "jest": "^26.6.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "nodemon": "^2.0.7",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
@@ -32,6 +33,12 @@
     "@babel/preset-env": "^7.12.16",
     "babel-loader": "^8.2.2",
     "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "webpack": "^5.22.0",
