--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "prop-types": "^15.7.2",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "styled-components": "^5.2.1"
