--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:client": "webpack serve --mode development --compress --open",
     "dev": "webpack --watch --mode development --progress",
     "build": "webpack --mode production --progress",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
