--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-    "presets": [ "@babel/env","@babel/react"]
+    "presets": [ "@babel/env","@babel/react"],
+    "env": {
+        "production": {
+          "plugins": ["transform-react-remove-prop-types"]
+        }
+      }
 }
