--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,9 @@
     "presets": [ "@babel/env","@babel/react"],
     "env": {
         "production": {
-          "plugins": ["transform-react-remove-prop-types"]
-        }
+          "plugins": ["transform-react-remove-prop-types",["react-remove-properties", {"properties": ["data-test"]}
+          ]
+        ]
       }
-}
+    }
+  }
